--- a/test_client.html
+++ b/test_client.html
@@ -150,6 +150,8 @@
             </div>
         </div>
     </div>
+    
+    <div id="loanModal" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.5); z-index: 1000; justify-content: center; align-items: center;">
         <div class="modal-content">
             <h3 style="margin-top:0">筹码已用尽</h3>
             <p id="loanMessage"></p>
