--- a/test_client.html
+++ b/test_client.html
@@ -126,7 +126,7 @@
             display: flex; justify-content: center; align-items: center;
             font-size: 8px; font-weight: bold; text-transform: uppercase;
             box-shadow: 0 4px 12px rgba(0,0,0,0.5); z-index: 35;
-            top: -20px; right: -20px; /* 挂在右上角 */
+            bottom: -20px; left: -20px; /* 挂在左下角 */
             border: 2px solid rgba(255,255,255,0.3);
             text-align: center; line-height: 1.1; padding: 3px; box-sizing: border-box;
         }
